using AssertJ assertions instead of JUnit assertions

--- a/pom.xml
+++ b/pom.xml
@@ -14,12 +14,17 @@
         <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
     </properties>
 
-    <!-- Déclaration de la dépendance vers JUnit -->
     <dependencies>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
             <version>5.5.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.13.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
