--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,11 @@
             <version>3.13.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.12.1</version>
+        </dependency>
     </dependencies>
 
     <!-- Pour être compatible avec JUnit 5 -->
